--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   <body>
     <% if user_signed_in? %>
     <li>
+      <%= link_to "投稿フォーム", new_book_path %>
+    </li>
+    <li>
       <%= link_to "ログアウト", destroy_user_session_path, method: :destroy %>
     </li>
     <% else %>
